feat: bring in the new client methods and breaking changes (#32)
